# Context-OS

./: .gitignore  .mcp.json  16-june-updates.md  AG_UI_ADOPTION_PLAN.md  ARCHITECTURE.md  AUTOMATIC_SEARCH_FALLBACK.md  BACKEND_SETUP.md  BILLING_STRATEGY.md  DEVELOPMENT_LOG.md  DOCKER_POSTGRES_MODE.md  DOCKER_SETUP.md  DOCS_STRATEGY.md  Dockerfile  LAUNCH_CHECKLIST.md  LICENSE  MEMORY_UPGRADE_PLAN.md  OSS_STRATEGY.md  PGADMIN_SETUP.md  PRODUCT_STRATEGY.md  PROJECT_BRAIN.md  README.md  RECENT_DEV_CHANGES.md  ROADMAP.md  RUN_ON_NEW_PC.md  VISION.md  VISION_SUMMARY.md  cursor_ai_pdf_chat_application_design.md  docker-compose.yml  fly.toml  middleware.ts  package-lock.json  package.json  pyproject.toml  railway.json
.github/workflows/: tests.yml
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/amancrawl/: page.tsx
app/auth/callback/: page.tsx
app/chat/: page.tsx
app/dashboard/: page.tsx
app/demo/: page.tsx
app/login/: page.tsx
app/signup/: page.tsx
app/status/: page.tsx
apps/server/: README.md  main.py  pyproject.toml
apps/server/middleware/: __init__.py  auth.py
apps/server/routes/: __init__.py  health.py  memory.py
apps/server/services/: __init__.py  knowledge_service.py  mcp_server.py  memory_service.py  search_service.py
apps/server/tests/: test_mcp.py
backend/: .dockerignore  Dockerfile  main.py  requirements.txt  test_agent.py  test_crew.py  test_cross_user.py
backend/agents/: __init__.py  citation_agent.py  crawl_agents.py  flows.py  knowledge_agent.py  memory_agent.py  planner.py  research_agent.py  retrieval_agent.py  router.py  security_agent.py  tools.py  workflow_agent.py
backend/app/: __init__.py  auth_middleware.py  config.py
backend/app/routes/: __init__.py  amancrawl.py  auth.py  browser.py  chat.py  dashboard.py  health.py  intelligence.py  oauth.py  payments.py  pipeline.py  subscriptions.py  upload.py  workflow.py
backend/backend/data/: memory.db
backend/data/: memory.db
backend/db/: POSTGRES_MVP_DESIGN.md
backend/db/init/: 001_mvp_schema.sql  002_subscriptions.sql  003_workflow_schema.sql
backend/embeddings/: __init__.py  embedder.py
backend/rag/: __init__.py  prompt_builder.py  retriever.py
backend/scripts/: init_postgres.py
backend/services/: __init__.py  ag_ui_events.py  agent_service.py  auth_store.py  browser_automation.py  chunking.py  crawl4ai_service.py  crawl_service.py  document_store.py  knowledge_graph.py  llm_planner.py  mcp_server.py  memory_store.py  oauth_service.py  openrouter.py  payment_service.py  pdf_extract.py  pdf_pages.py  pdf_upload.py  pipeline_runner.py  postgres_store.py  search_router.py  semantic_memory.py  subscription_service.py  text_normalize.py  tokenizer_viz.py  web_search.py  workflow_service.py
backend/tests/: conftest.py  test_health.py  test_intelligence.py  test_llm_planner.py  test_mcp.py  test_oauth.py  test_payments.py
backend/vector_db/: __init__.py  milvus_client.py  milvus_store.py
cli/: README.md  pyproject.toml
cli/context_cli/: __init__.py  main.py
cli/tests/: test_cli.py
components/: ChatPanel.tsx  DocumentInfo.tsx  LimitReachedModal.tsx  MainWorkspace.tsx  PdfUpload.tsx  PipelineViewer.tsx  PipelineVisualizer.tsx  Sidebar.tsx  SubscriptionModal.tsx  UsageCounter.tsx
components/amancrawl/: PipelineVisualization.tsx  ResearchDemo.tsx
components/auth/: AuthForm.tsx  AuthPageShell.tsx
components/chat/: ChatInterface.tsx  CompactChatInterface.tsx  MessageList.tsx  ModelPicker.tsx  types.ts
components/motion/: ScrollReveal.tsx  StaggerContainer.tsx
components/pipeline/: StepVizContent.tsx
components/ui/: bento-grid.tsx  globe.tsx  hero-video-dialog.tsx  orbiting-circles.tsx  pixel-image.tsx  scroll-area.tsx
design-system/: SKILL.md  firecrawl-design.md
docs/: 2026-06-17-scraping-architecture.md  docusaurus.config.js  landing-page-firecrawl-ui-update.md  package.json  sidebars.js
docs/docs/: api-reference.md  architecture.md  changelog.md  cli.md  examples.md  getting-started.md  index.md  mcp.md  roadmap.md
docs/docs/cli/: overview.md
docs/docs/concepts/: agent-integration.md  context-assembly.md  knowledge-graph.md  memory.md  retrieval.md  web-intelligence.md
docs/docs/crawl/: browser.md  crawl.md  extract.md  fallback.md  map.md  overview.md  scrape.md
docs/docs/deployment/: docker.md  self-hosted.md
docs/docs/guides/: agent-memory.md  hybrid-search.md  knowledge-patterns.md  migration-firecrawl.md  migration-mem0.md
docs/docs/knowledge/: auto-extraction.md  entities.md  graph-queries.md  overview.md  relationships.md
docs/docs/mcp/: claude-setup.md  crawl-mcp.md  cursor-setup.md  memory-mcp.md  overview.md  search-mcp.md
docs/docs/memory/: best-practices.md  consolidation.md  context-windows.md  links.md  search.md  store.md  types.md
docs/docs/sdk/: go.md  java.md  python.md  rust.md  typescript.md
lib/: auth.ts  concepts.ts  storage.ts  types.ts
references/: CONTENT.md  CORE_SYSTEM_PROMPT.md  DESIGN.md  FIRECRAWL_MARKET_RESEARCH.md  PRD.md  SKILL.md
sdk/go/: client.go  crawl.go  go.mod  knowledge.go  memory.go  search.go
sdk/java/: pom.xml
sdk/python/: README.md  pyproject.toml
sdk/python/context_ai/: __init__.py  _http.py  client.py  crawl.py  knowledge.py  memory.py  search.py  types.py
sdk/python/tests/: test_client.py
sdk/rust/: Cargo.toml
sdk/rust/src/: client.rs  crawl.rs  error.rs  knowledge.rs  lib.rs  memory.rs  search.rs
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
services/: amancrawl.ts  api.ts  auth.ts  dashboard.ts  subscriptions.ts
(+24 files in other folders)
