[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-platform"
version = "0.1.0"
description = "Context Infrastructure for AI Agents — Memory, Search, Crawl, Knowledge, MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["packages/context-core"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages/*/tests", "sdk/python/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]