[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-cli"
version = "0.1.0"
description = "CLI for Context OS — Memory, Search, Crawl, Knowledge"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Aman Sagar", email = "aman@amansagar.in" },
]
keywords = [
    "context",
    "ai",
    "cli",
    "memory",
    "search",
    "crawl",
    "knowledge-graph",
    "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
context = "context_cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/AmanSagar0607/Context-OS"
Repository = "https://github.com/AmanSagar0607/Context-OS"

[tool.hatch.build.targets.wheel]
packages = ["context_cli"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]