[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextos-sdk"
version = "0.1.0"
description = "Python SDK for Context OS — Memory, Search, Crawl, Knowledge"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Aman Sagar", email = "aman@amansagar.in" },
]
keywords = [
    "context",
    "ai",
    "memory",
    "search",
    "crawl",
    "knowledge-graph",
    "mcp",
    "agent",
    "infrastructure",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/AmanSagar0607/Context-OS"
Documentation = "https://docs.context-ai.dev"
Repository = "https://github.com/AmanSagar0607/Context-OS"
Issues = "https://github.com/AmanSagar0607/Context-OS/issues"
Discord = "https://discord.gg/YrSpR43UB"
Twitter = "https://x.com/AmanSagar0607a"

[tool.hatch.build.targets.wheel]
packages = ["context_ai"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"